--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
+FRONTEND_URL=https://cjs-sn-bakeli-test.vercel.app
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,https://cjs-sn-bakeli-test.vercel.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
